// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible render crossed onPress - 1 1`] = `
<View
  style={
    [
      {
        "padding": 20,
        "width": "100%",
      },
      {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    accessibilityLabel="collapsed"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "red",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      numberOfLines={1}
      style={
        [
          {
            "color": "#151C2C",
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
            "minHeight": 18,
          },
          [
            {
              "flex": 1,
            },
            {
              "flex": 1,
            },
          ],
        ]
      }
    >
      title
    </Text>
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#353A45",
          "fontFamily": "Neotis",
          "fontSize": 24,
        }
      }
    >
      
    </Text>
  </View>
  <View />
</View>
`;

exports[`Collapsible render crossed onPress - 1 android 1`] = `
<View
  style={
    [
      {
        "padding": 20,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="collapsed"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      numberOfLines={2}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          [
            {
              "flex": 1,
            },
            undefined,
          ],
        ]
      }
    >
      title
    </Text>
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#353A45",
          "fontFamily": "Neotis",
          "fontSize": 24,
        }
      }
    >
      
    </Text>
  </View>
  <View />
  <View />
</View>
`;

exports[`Collapsible render crossed onPress - 2 1`] = `
<View
  style={
    [
      {
        "padding": 20,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="collapsed"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={true}
      numberOfLines={2}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          [
            {
              "flex": 1,
            },
            undefined,
          ],
        ]
      }
    >
      title
    </Text>
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#353A45",
          "fontFamily": "Neotis",
          "fontSize": 24,
        }
      }
    >
      
    </Text>
  </View>
  <View />
</View>
`;
